; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_events_filter.c_filter_clear_pred.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_events_filter.c_filter_clear_pred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filter_pred = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filter_pred*)* @filter_clear_pred to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_clear_pred(%struct.filter_pred* %0) #0 {
  %2 = alloca %struct.filter_pred*, align 8
  store %struct.filter_pred* %0, %struct.filter_pred** %2, align 8
  %3 = load %struct.filter_pred*, %struct.filter_pred** %2, align 8
  %4 = getelementptr inbounds %struct.filter_pred, %struct.filter_pred* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @kfree(i32* %5)
  %7 = load %struct.filter_pred*, %struct.filter_pred** %2, align 8
  %8 = getelementptr inbounds %struct.filter_pred, %struct.filter_pred* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.filter_pred*, %struct.filter_pred** %2, align 8
  %10 = getelementptr inbounds %struct.filter_pred, %struct.filter_pred* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
